argocd/apps/restaurant/restaurant-backend/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-backend-deployment
  labels:
    environment: prod
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: restaurant-backend
