argocd/apps/restaurant/restaurant-backend/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-backend-ingress
  labels:
    environment: prod
spec:
  tls:
  - hosts:
    - restaurant-api.elgallonegroec.com
    secretName: restaurant-api-certificate
  rules:
  - host: restaurant-api.elgallonegroec.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restaurant-backend-service
            port:
              number: 80
